[tool:pytest]
addopts= --tb native -v -r fxX --maxfail=25 -p no:warnings
python_files=test/*test_*.py


[flake8]
show-source = true
enable-extensions = G
exclude = .venv,.git,.tox,dist,doc,*egg,build
import-order-style = google
application-import-names = sqlalchemy_jdbcapi

[metadata]
description-file = README.rst